--- a/Fuente/styles/sass/pages/_sobre-nosotros.scss
+++ b/Fuente/styles/sass/pages/_sobre-nosotros.scss
@@ -28,7 +28,9 @@
         font-size: 2rem;
         color: $color-Neutro-Blanco;
         line-height: 1.2rem;
-        margin: 1rem 0 0.5rem;
+        margin: 1rem 0 1rem;
+        text-indent: 0;
+        font-weight: bolder;
     }
 
     p {
@@ -36,6 +38,7 @@
         text-align: center;
         color: $color-Neutro-Blanco;
         width: 100%; 
+        text-indent: 0;
     }
 }
 
